(feat) responsive home-page is done

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Weather</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      html, body, #root {
+        height: 100%;
+        margin: 0px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
